--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pre-build": "npm run build && npm run serve",
+    "serve": "vite preview",
+    "https-preview": "serve dist",
+    "http-build": "npm run build && npm run https-preview"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -16,6 +20,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "https-localhost": "^4.7.1",
     "vite": "^2.9.2",
     "vite-plugin-pwa": "^0.12.0"
   }
