--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "workbox-precaching": "^6.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
